[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/player_orb.png" type="Texture" id=1]
[ext_resource path="res://sprites/orb3.png" type="Texture" id=2]
[ext_resource path="res://sprites/orb2.png" type="Texture" id=3]
[ext_resource path="res://sprites/orb5.png" type="Texture" id=4]
[ext_resource path="res://sprites/orb6.png" type="Texture" id=5]
[ext_resource path="res://sprites/orb8.png" type="Texture" id=6]
[ext_resource path="res://sprites/orb4.png" type="Texture" id=7]
[ext_resource path="res://sprites/orb9.png" type="Texture" id=8]
[ext_resource path="res://sprites/orb7.png" type="Texture" id=9]
[ext_resource path="res://store.gd" type="Script" id=20]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/Imperial.otf"

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = SubResource( 1 )

[node name="store" type="Node2D"]
script = ExtResource( 20 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 600, 1024 )
color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 600.0
margin_bottom = 1024.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_top = 232.0
margin_right = 600.0
margin_bottom = 792.0
custom_constants/separation = 100
alignment = 1

[node name="orbs_label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 100.0
rect_min_size = Vector2( 600, 100 )
mouse_filter = 1
custom_fonts/font = SubResource( 2 )
text = "ORBS"
align = 1
valign = 1

[node name="orbs_grids" type="GridContainer" parent="CenterContainer/VBoxContainer"]
margin_left = 100.0
margin_top = 200.0
margin_right = 500.0
margin_bottom = 560.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/vseparation = 30
custom_constants/hseparation = 50
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="CenterContainer/VBoxContainer/orbs_grids"]
margin_right = 100.0
margin_bottom = 100.0
mouse_filter = 1
texture_normal = ExtResource( 1 )

[node name="TextureButton2" type="TextureButton" parent="CenterContainer/VBoxContainer/orbs_grids"]
margin_left = 150.0
margin_right = 250.0
margin_bottom = 100.0
mouse_filter = 1
texture_normal = ExtResource( 3 )

[node name="TextureButton3" type="TextureButton" parent="CenterContainer/VBoxContainer/orbs_grids"]
margin_left = 300.0
margin_right = 400.0
margin_bottom = 100.0
mouse_filter = 1
texture_normal = ExtResource( 2 )

[node name="TextureButton4" type="TextureButton" parent="CenterContainer/VBoxContainer/orbs_grids"]
margin_top = 130.0
margin_right = 100.0
margin_bottom = 230.0
mouse_filter = 1
texture_normal = ExtResource( 7 )

[node name="TextureButton5" type="TextureButton" parent="CenterContainer/VBoxContainer/orbs_grids"]
margin_left = 150.0
margin_top = 130.0
margin_right = 250.0
margin_bottom = 230.0
mouse_filter = 1
texture_normal = ExtResource( 4 )

[node name="TextureButton6" type="TextureButton" parent="CenterContainer/VBoxContainer/orbs_grids"]
margin_left = 300.0
margin_top = 130.0
margin_right = 400.0
margin_bottom = 230.0
mouse_filter = 1
texture_normal = ExtResource( 5 )

[node name="TextureButton7" type="TextureButton" parent="CenterContainer/VBoxContainer/orbs_grids"]
margin_top = 260.0
margin_right = 100.0
margin_bottom = 360.0
mouse_filter = 1
texture_normal = ExtResource( 9 )

[node name="TextureButton8" type="TextureButton" parent="CenterContainer/VBoxContainer/orbs_grids"]
margin_left = 150.0
margin_top = 260.0
margin_right = 250.0
margin_bottom = 360.0
mouse_filter = 1
texture_normal = ExtResource( 6 )

[node name="TextureButton9" type="TextureButton" parent="CenterContainer/VBoxContainer/orbs_grids"]
margin_left = 300.0
margin_top = 260.0
margin_right = 400.0
margin_bottom = 360.0
mouse_filter = 1
texture_normal = ExtResource( 8 )
[connection signal="pressed" from="CenterContainer/VBoxContainer/orbs_grids/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/orbs_grids/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/orbs_grids/TextureButton3" to="." method="_on_TextureButton3_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/orbs_grids/TextureButton4" to="." method="_on_TextureButton4_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/orbs_grids/TextureButton5" to="." method="_on_TextureButton5_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/orbs_grids/TextureButton6" to="." method="_on_TextureButton6_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/orbs_grids/TextureButton7" to="." method="_on_TextureButton7_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/orbs_grids/TextureButton8" to="." method="_on_TextureButton8_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/orbs_grids/TextureButton9" to="." method="_on_TextureButton9_pressed"]
